Some fixes and changes...